// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`initialAppOwner should use provided owner 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              214,
              142,
              243,
              254,
              221,
              13,
              246,
              19,
              136,
              198,
              193,
              14,
              183,
              237,
              206,
              51,
              171,
              193,
              65,
              231,
              26,
              97,
              31,
              142,
              157,
              180,
              17,
              113,
              106,
              171,
              129,
              26,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
          "appOwnerWriteKey": {
            "data": [
              193,
              200,
              155,
              104,
              173,
              156,
              172,
              55,
              27,
              230,
              228,
              51,
              167,
              204,
              43,
              8,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-2840b80279bdc6f6",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "todo",
      "rows": [],
    },
    {
      "name": "todoCategory",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`onInit callback should be called with correct parameters and can seed initial data 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              214,
              142,
              243,
              254,
              221,
              13,
              246,
              19,
              136,
              198,
              193,
              14,
              183,
              237,
              206,
              51,
              171,
              193,
              65,
              231,
              26,
              97,
              31,
              142,
              157,
              180,
              17,
              113,
              106,
              171,
              129,
              26,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "m4Swbg7PvGPpEyB_q4JY9",
          "appOwnerMnemonic": "call brass keen rough true spy dream robot useless ignore anxiety badge",
          "appOwnerWriteKey": {
            "data": [
              193,
              200,
              155,
              104,
              173,
              156,
              172,
              55,
              27,
              230,
              228,
              51,
              167,
              204,
              43,
              8,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.011Z-0001-47ebc9cd4ddaff08",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [
        {
          "column": "name",
          "id": {
            "data": [
              102,
              222,
              231,
              157,
              156,
              119,
              15,
              80,
              10,
              111,
              59,
              188,
              195,
              208,
              227,
              128,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "table": "todoCategory",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
          "value": "Not Urgent",
        },
        {
          "column": "createdAt",
          "id": {
            "data": [
              102,
              222,
              231,
              157,
              156,
              119,
              15,
              80,
              10,
              111,
              59,
              188,
              195,
              208,
              227,
              128,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "table": "todoCategory",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
          "value": "1970-01-01T00:00:00.009Z",
        },
        {
          "column": "title",
          "id": {
            "data": [
              186,
              111,
              116,
              220,
              155,
              7,
              109,
              90,
              172,
              0,
              91,
              44,
              202,
              207,
              217,
              144,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
          "value": "Try React Suspense",
        },
        {
          "column": "categoryId",
          "id": {
            "data": [
              186,
              111,
              116,
              220,
              155,
              7,
              109,
              90,
              172,
              0,
              91,
              44,
              202,
              207,
              217,
              144,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
          "value": "Zt7nnZx3D1AKbzu8w9Djg",
        },
        {
          "column": "createdAt",
          "id": {
            "data": [
              186,
              111,
              116,
              220,
              155,
              7,
              109,
              90,
              172,
              0,
              91,
              44,
              202,
              207,
              217,
              144,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
          "value": "1970-01-01T00:00:00.009Z",
        },
      ],
    },
    {
      "name": "todo",
      "rows": [
        {
          "categoryId": "Zt7nnZx3D1AKbzu8w9Djg",
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "um903JsHbVqsAFssys_Zk",
          "isCompleted": null,
          "isDeleted": null,
          "title": "Try React Suspense",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "todoCategory",
      "rows": [
        {
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "Zt7nnZx3D1AKbzu8w9Djg",
          "isDeleted": null,
          "name": "Not Urgent",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "evolu_timestamp",
      "rows": [
        {
          "c": 1,
          "h1": 259761259403146,
          "h2": 141925445732367,
          "l": 2,
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "t": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
        },
        {
          "c": 1,
          "h1": 167102060756421,
          "h2": 202046611856140,
          "l": 1,
          "ownerId": {
            "data": [
              155,
              132,
              176,
              110,
              14,
              207,
              188,
              99,
              233,
              19,
              32,
              127,
              171,
              130,
              88,
              244,
            ],
            "type": "Buffer",
          },
          "t": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              71,
              235,
              201,
              205,
              77,
              218,
              255,
              8,
            ],
            "type": "Buffer",
          },
        },
      ],
    },
  ],
}
`;
